feat(security): actualizar configuración de seguridad y servicios JWT